--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 .barlow-condensed-thin {
   font-family: "Barlow Condensed", sans-serif;
@@ -129,7 +130,6 @@
   left: 0;
   right: 0;
   color: white;
-  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -184,4 +184,55 @@
   font-family: "Gilda Display", serif;
   font-weight: 400;
   font-style: normal;
+}
+.room-container {
+  position: relative;
+  width: 45%;
+  height: 250px;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.room-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.room-container:hover .room-image {
+  transform: scale(1.1);
+}
+
+.room-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-align: center;
+  padding: 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.room-container:hover .room-overlay {
+  opacity: 1;
+}
+
+.menu-slide-in {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 70%;
+  height: 100%;
+  background-color: #000;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(0);
+}
+
+.menu-slide-in.closed {
+  transform: translateX(-100%);
 }
